Fixes & More extension methods

--- a/src/Localization/Localization/Web.config
+++ b/src/Localization/Localization/Web.config
@@ -77,7 +77,7 @@
       </dependentAssembly>
     </assemblyBinding> 
   </runtime>
-  <locmvc locale="" strategy="LocMvc.Strategies.ResourceStrategy, LocMvc" displayUnlocalizedKeys="true">
+  <locmvc locale="en" strategy="LocMvc.Strategies.ResourceStrategy, LocMvc" displayUnlocalizedKeys="true">
     <add name="resource" value="Localization.Properties.Strings, Localization" />
     <add name="contextKeys" value="controller, action, contextname" />
     <add name="maxKeyLength" value="100" />
