Multiple improvements / fixes
* Moved LocalizationExtensions.cs to an appropriate folder
* Split out all extensions to the LocMvc.Extensions namespace
* Removed configuration dependency from LocMvc.Extensions extensions
* Reconfigured extensions in the System and System.Web.Mvc namespaces to
call the LocMvc.Extension ones
* Added a Localization container control for use with ASPX and ASCX
pages. (for you non-mvc users)
* Fixed an issue where context values were not getting sanitized with
the rest of the contextual key.
* Adding LocASP package for nuget (contains appropriate configurations).

--- a/src/Localization/LocMvc/LocMvc.csproj
+++ b/src/Localization/LocMvc/LocMvc.csproj
@@ -45,10 +45,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Configuration\LocMvcConfiguration.cs" />
+    <Compile Include="Controls\Localize.cs" />
+    <Compile Include="Extensions\XmlExtensions.cs" />
     <Compile Include="ILocalizationService.cs" />
     <Compile Include="LocalizationService.cs" />
     <Compile Include="Strategies\ILocalizationStrategy.cs" />
-    <Compile Include="LocalizationExtensions.cs" />
+    <Compile Include="Extensions\LocalizationExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Strategies\ResourceStrategy.cs" />
   </ItemGroup>
